<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/output_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name" />


    <EditText
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/output_text" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_text">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_to_prefs"
            android:layout_margin="8dp"
            android:text="@string/save_to_prefs"
            android:textSize="12sp"
            app:layout_gravity="center_horizontal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/load_from_prefs"
            android:layout_margin="8dp"
            android:text="@string/load_from_prefs"
            android:textSize="12sp"
            app:layout_gravity="center_horizontal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_to_internal"
            android:layout_margin="8dp"
            android:text="@string/save_to_internal"
            android:textSize="12sp"
            app:layout_gravity="center_horizontal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/load_from_internal"
            android:layout_margin="8dp"
            android:text="@string/load_from_internal"
            android:textSize="12sp"
            app:layout_gravity="center_horizontal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_to_external"
            android:layout_margin="8dp"
            android:text="@string/save_to_external"
            android:textSize="12sp"
            app:layout_gravity="center_horizontal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/load_from_external"
            android:layout_margin="8dp"
            android:text="@string/load_from_external"
            android:textSize="12sp"
            app:layout_gravity="center_horizontal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_to_db"
            android:layout_margin="8dp"
            android:text="@string/save_to_db"
            android:textSize="12sp"
            app:layout_gravity="center_horizontal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/load_from_db"
            android:layout_margin="8dp"
            android:text="@string/load_from_db"
            android:textSize="12sp"
            app:layout_gravity="center_horizontal" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>